Fix margins in HTML

--- a/src/frontend/configure/index.hbs
+++ b/src/frontend/configure/index.hbs
@@ -14,7 +14,7 @@
 	<body>
 		<section class="vh-100">
 			<div class="container py-5">
-				<div class="row d-flex justify-content-center align-items-center h-100">
+				<div class="row d-flex justify-content-center align-items-center">
 					<div class="col-12 col-md-8 col-lg-6 col-xl-5">
 						<div class="card bg-dark text-white" style="border-radius: 1rem">
 							<div class="card-body p-5 text-center">
