Feature implementation of #61 (Filter by movie quality)

--- a/src/frontend/configure/index.hbs
+++ b/src/frontend/configure/index.hbs
@@ -136,6 +136,51 @@
 												oninput="updateLink()"
 											/>
 											<label for="sorting3">Size (desc)</label>
+										</fieldset>
+									</div>
+
+									<div class="form-outline form-white mb-4">
+										<label class="form-label">Quality exclusion</label>
+										<fieldset>
+											<div>
+												<input
+													type="checkbox"
+													id="2160"
+													name="qualityExclusion"
+													value="2160"
+													oninput="updateLink()"
+												/>
+												<label for="quality1">2160p</label>
+											</div>
+											<input
+												type="checkbox"
+												id="1080"
+												name="qualityExclusion"
+												value="1080"
+												oninput="updateLink()"
+											/>
+											<label for="quality2">1080p</label>
+											<div>
+											<input
+												type="checkbox"
+												id="720"
+												name="qualityExclusion"
+												value="720"
+												oninput="updateLink()"
+											/>
+											<label for="quality3">720p</label>
+											</div>
+											<div>
+											<input
+												type="checkbox"
+												id="480"
+												name="qualityExclusion"
+												value="480"
+												oninput="updateLink()"
+											/>
+											<label for="quality4">480p</label>
+											</div>
+										</fieldset>
 									</div>
 
 									<div class="form-outline form-white mb-4" id="useTmdb">
@@ -215,7 +260,6 @@
 			document.getElementById("premiumizeApiDiv").style.display = "none";
 			document.getElementById("sortingDiv").style.display = "none";
 			document.getElementById("tmdbApi").style.display = "none";
-
 			function onChangeMaxResults() {
 				let addonType = document.getElementById("serviceProvider").value;
 				let maxResultsInput = document.getElementById("maxResults");
@@ -256,7 +300,13 @@
 				}
 
 				let dynamicLink = document.getElementById("configureLink");
-
+				let qualityExclusion = [];
+				let qualityExclusionCheckboxes = document.querySelectorAll(
+					'input[name="qualityExclusion"]:checked'
+				);
+				qualityExclusionCheckboxes.forEach((checkbox) => {
+					qualityExclusion.push(checkbox.value);
+				});
 				if (serviceProvider === "torrent") {
 					document.getElementById("realDebridApiDiv").style.display = "none";
 					document.getElementById("allDebridApiDiv").style.display = "none";
@@ -270,7 +320,8 @@
 						sorting: sorting,
 						ascOrDesc: ascOrDesc,
 						tmdbApiKey: tmdbApiKey,
-						locale: languageException
+						locale: languageException,
+						qualityExclusion: qualityExclusion
 					};
 					dynamicLink.href = `stremio://${
 						window.location.host
@@ -291,7 +342,8 @@
 						sorting: sorting,
 						ascOrDesc: ascOrDesc,
 						tmdbApiKey: tmdbApiKey,
-						locale: languageException
+						locale: languageException,
+						qualityExclusion: qualityExclusion
 					};
 					dynamicLink.href = `stremio://${
 						window.location.host
@@ -313,7 +365,8 @@
 						sorting: sorting,
 						ascOrDesc: ascOrDesc,
 						tmdbApiKey: tmdbApiKey,
-						locale: languageException
+						locale: languageException,
+						qualityExclusion: qualityExclusion
 					};
 					dynamicLink.href = `stremio://${
 						window.location.host
@@ -335,7 +388,8 @@
 						sorting: sorting,
 						ascOrDesc: ascOrDesc,
 						tmdbApiKey: tmdbApiKey,
-						locale: languageException
+						locale: languageException,
+						qualityExclusion: qualityExclusion
 					};
 					dynamicLink.href = `stremio://${
 						window.location.host
@@ -360,6 +414,7 @@
 					const sorting = urlParams.get('sorting');
 					const tmdbApiKey = urlParams.get('tmdbApiKey');
 					const locale = urlParams.get('locale');
+					const qualityExclusion = urlParams.get('qualityExclusion');
 					document.getElementById("serviceProvider").value = serviceProvider;
 					document.getElementById("realDebridApi").value = realDebridApi;
 					document.getElementById("allDebridApi").value = allDebridApi;
@@ -370,10 +425,15 @@
 					document.getElementById(sorting).checked = true;
 					document.getElementById("tmdbApiKey").value = tmdbApiKey;
 					document.getElementById("languageException").value = locale;
+					if (qualityExclusion !== null) {
+						const qualityExclusionArray = qualityExclusion.split(",");
+						qualityExclusionArray.forEach((quality) => {
+							document.getElementById(quality).checked = true;
+						});
+					}
 					updateLink();
 				}
 			}
-
 			// Appelle la fonction au chargement de la page
 			window.onload = prefillUrl;
 		</script>
