--- a/src/frontend/configure/scraper.hbs
+++ b/src/frontend/configure/scraper.hbs
@@ -138,7 +138,7 @@
 				};
 				console.log(dataJson)
 				const configureLink = document.getElementById("configureLink");
-				dynamicLink.href = `${window.location.protocol}/scraper/${btoa(
+				dynamicLink.href = `${window.location.protocol}${window.location.pathname}/${btoa(
 						JSON.stringify(dataJson)
 					)}`;
 
