Another fix for mobile Stremio streaming and fixed scraper indexer naming

--- a/src/frontend/configure/index.hbs
+++ b/src/frontend/configure/index.hbs
@@ -352,7 +352,8 @@
 						locale: languageException,
 						qualityExclusion: qualityExclusion,
 						maxSize: maxSize,
-						maxThread: maxThread
+						maxThread: maxThread,
+						host: window.location.host
 					};
 					dynamicLink.href = `stremio://${
 						window.location.host
@@ -376,7 +377,8 @@
 						locale: languageException,
 						qualityExclusion: qualityExclusion,
 						maxSize: maxSize,
-						maxThread: maxThread
+						maxThread: maxThread,
+						host: window.location.host
 					};
 					dynamicLink.href = `stremio://${
 						window.location.host
@@ -401,7 +403,8 @@
 						locale: languageException,
 						qualityExclusion: qualityExclusion,
 						maxSize: maxSize,
-						maxThread: maxThread
+						maxThread: maxThread,
+						host: window.location.host
 					};
 					dynamicLink.href = `stremio://${
 						window.location.host
@@ -426,7 +429,8 @@
 						locale: languageException,
 						qualityExclusion: qualityExclusion,
 						maxSize: maxSize,
-						maxThread: maxThread
+						maxThread: maxThread,
+						host: window.location.host
 					};
 					dynamicLink.href = `stremio://${
 						window.location.host
