Fix configure field validation

--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -80,7 +80,7 @@
                 <div class="mt-10 relative flex gap-x-3">
                     <div class="flex h-6 items-center">
                         <input id="torrenting" name="torrenting" value="torrenting" type="checkbox"
-                               class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600" checked
+                               class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600"
                                oninput="updateProviderFields(true)">
                     </div>
                     <div class="text-sm leading-6">
@@ -206,7 +206,7 @@
                 <div class="mt-10 relative flex gap-x-3">
                     <div class="flex h-6 items-center">
                         <input id="cinemeta" name="metadataProvider" value="cinemeta" type="radio"
-                               class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600" checked
+                               class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600"
                                oninput="updateProviderFields(true)">
                     </div>
                     <div class="text-sm leading-6">
