Add Brazilian Portuguese as supported language

--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -409,6 +409,10 @@
                                     <input type="checkbox" id="pt"/>
                                     🇵🇹 <span class="ml-1">Portuguese</span>
                                 </label>
+                                <label for="pt-br">
+                                    <input type="checkbox" id="pt-br"/>
+                                    🇧🇷 <span class="ml-1">Brazilian Portuguese</span>
+                                </label>
                                 <label for="ru">
                                     <input type="checkbox" id="ru"/>
                                     🇷🇺 <span class="ml-1">Russian</span>
