Correct country code to capital letters

--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -409,8 +409,8 @@
                                     <input type="checkbox" id="pt"/>
                                     🇵🇹 <span class="ml-1">Portuguese</span>
                                 </label>
-                                <label for="pt-br">
-                                    <input type="checkbox" id="pt-br"/>
+                                <label for="pt-BR">
+                                    <input type="checkbox" id="pt-BR"/>
                                     🇧🇷 <span class="ml-1">Brazilian Portuguese</span>
                                 </label>
                                 <label for="ru">
